--- a/index.html
+++ b/index.html
@@ -12,19 +12,24 @@
       <div class="card">
         <h1>Gabriel Ferreira</h1>
         <img src="images/imgprausar.jpg" alt="a picture of me" class="image-circle">
-        <p>I love movies, series, <strong>cowboy bebop</strong>, sci fi books, crossfit and <strong>indie music</strong>. I left everything behind in order to become a qualified programmer.It is far from being an easy task but I'm doing my best.</p>
-        <a href="https://www.youtube.com/watch?v=krcK-Ocimw4" target="_blank" class="btn-yellow">See you space cowboy</a>
+        <p>I love movies, series, <strong>cowboy bebop</strong>, sci fi books, crossfit, RPG and <strong>indie music</strong>. I left everything behind in order to start my arduous journey to become a qualified programmer.It is far from being an easy task but I'm doing my best.</p>
+        <a href="https://www.youtube.com/watch?v=krcK-Ocimw4" target="_blank" class="btn-blue">See you space cowboy</a>
       </div>
       <div class="card">
         <h2>Skills</h2>
-        <p>Ruby | Sqlite3 | English</p>
+        <p>Ruby | Sqlite3 | Html | CSS | English</p>
+      </div>
+      <div class="card">
+        <h2>Stuff that I'll add later</h2>
+        <p>going to add something in here later</p>
       </div>
       <div class="card">
         <h2>Follow Me</h2>
-        <ul id="list-inline">
+        <ul class="list-inline">
           <li><a class="social-icon" href="https://github.com/gabrielo3012" target="_blank"><i class="fa-brands fa-github"></i></a></li>
           <li><a class="social-icon" href="https://www.instagram.com/gabrielo3012/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
           <li><a class="social-icon" href="https://open.spotify.com/user/227xakpe66gb2gjt2gif46pja" target="_blank"><i class="fa-brands fa-spotify"></i></a></li>
+          <li><a class="social-icon" href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a></li>
         </ul>
         <img src="https://i.gifer.com/1ka6.gif" width="200" alt="_blank">
       </div>
